//! This code was AUTOGENERATED using the codama library.
//! Please DO NOT EDIT THIS FILE, instead use visitors
//! to add features, then rerun codama to update it.
//!
//! <https://github.com/codama-idl/codama>
//!
syntax = "proto3";

package vixen.parser.raydium_clmm;

message CreateAmmConfigIx {
	CreateAmmConfigIxAccounts accounts = 1;
	CreateAmmConfigIxData data = 2;
}

message UpdateAmmConfigIx {
	UpdateAmmConfigIxAccounts accounts = 1;
	UpdateAmmConfigIxData data = 2;
}

message CreatePoolIx {
	CreatePoolIxAccounts accounts = 1;
	CreatePoolIxData data = 2;
}

message UpdatePoolStatusIx {
	UpdatePoolStatusIxAccounts accounts = 1;
	UpdatePoolStatusIxData data = 2;
}

message CreateOperationAccountIx {
	CreateOperationAccountIxAccounts accounts = 1;
}

message UpdateOperationAccountIx {
	UpdateOperationAccountIxAccounts accounts = 1;
	UpdateOperationAccountIxData data = 2;
}

message TransferRewardOwnerIx {
	TransferRewardOwnerIxAccounts accounts = 1;
	TransferRewardOwnerIxData data = 2;
}

message InitializeRewardIx {
	InitializeRewardIxAccounts accounts = 1;
	InitializeRewardIxData data = 2;
}

message CollectRemainingRewardsIx {
	CollectRemainingRewardsIxAccounts accounts = 1;
	CollectRemainingRewardsIxData data = 2;
}

message UpdateRewardInfosIx {
	UpdateRewardInfosIxAccounts accounts = 1;
}

message SetRewardParamsIx {
	SetRewardParamsIxAccounts accounts = 1;
	SetRewardParamsIxData data = 2;
}

message CollectProtocolFeeIx {
	CollectProtocolFeeIxAccounts accounts = 1;
	CollectProtocolFeeIxData data = 2;
}

message CollectFundFeeIx {
	CollectFundFeeIxAccounts accounts = 1;
	CollectFundFeeIxData data = 2;
}

message OpenPositionIx {
	OpenPositionIxAccounts accounts = 1;
	OpenPositionIxData data = 2;
}

message OpenPositionV2Ix {
	OpenPositionV2IxAccounts accounts = 1;
	OpenPositionV2IxData data = 2;
}

message OpenPositionWithToken22NftIx {
	OpenPositionWithToken22NftIxAccounts accounts = 1;
	OpenPositionWithToken22NftIxData data = 2;
}

message ClosePositionIx {
	ClosePositionIxAccounts accounts = 1;
}

message IncreaseLiquidityIx {
	IncreaseLiquidityIxAccounts accounts = 1;
	IncreaseLiquidityIxData data = 2;
}

message IncreaseLiquidityV2Ix {
	IncreaseLiquidityV2IxAccounts accounts = 1;
	IncreaseLiquidityV2IxData data = 2;
}

message DecreaseLiquidityIx {
	DecreaseLiquidityIxAccounts accounts = 1;
	DecreaseLiquidityIxData data = 2;
}

message DecreaseLiquidityV2Ix {
	DecreaseLiquidityV2IxAccounts accounts = 1;
	DecreaseLiquidityV2IxData data = 2;
}

message SwapIx {
	SwapIxAccounts accounts = 1;
	SwapIxData data = 2;
}

message SwapV2Ix {
	SwapV2IxAccounts accounts = 1;
	SwapV2IxData data = 2;
}

message SwapRouterBaseInIx {
	SwapRouterBaseInIxAccounts accounts = 1;
	SwapRouterBaseInIxData data = 2;
}

message RepeatedUint64Row {
	repeated uint64 rows = 1;
}


message Observation {
	uint32 block_timestamp = 1;
	int64 tick_cumulative = 2;
	repeated uint64 padding = 3;
}

message PositionRewardInfo {
	string growth_inside_last_x64 = 1;
	uint64 reward_amount_owed = 2;
}

message RewardInfo {
	uint32 reward_state = 1;
	uint64 open_time = 2;
	uint64 end_time = 3;
	uint64 last_update_time = 4;
	string emissions_per_second_x64 = 5;
	uint64 reward_total_emissioned = 6;
	uint64 reward_claimed = 7;
	string token_mint = 8;
	string token_vault = 9;
	string authority = 10;
	string reward_growth_global_x64 = 11;
}

message TickState {
	int32 tick = 1;
	string liquidity_net = 2;
	string liquidity_gross = 3;
	string fee_growth_outside0_x64 = 4;
	string fee_growth_outside1_x64 = 5;
	repeated string reward_growths_outside_x64 = 6;
	repeated uint32 padding = 7;
}

enum PoolStatusBitIndex {
	PoolStatusBitIndexOpenPositionOrIncreaseLiquidity = 0;
	PoolStatusBitIndexDecreaseLiquidity = 1;
	PoolStatusBitIndexCollectFee = 2;
	PoolStatusBitIndexCollectReward = 3;
	PoolStatusBitIndexSwap = 4;
}

enum PoolStatusBitFlag {
	PoolStatusBitFlagEnable = 0;
	PoolStatusBitFlagDisable = 1;
}

enum RewardState {
	RewardStateUninitialized = 0;
	RewardStateInitialized = 1;
	RewardStateOpening = 2;
	RewardStateEnded = 3;
}

message AmmConfig {
	uint32 bump = 1;
	uint32 index = 2;
	string owner = 3;
	uint32 protocol_fee_rate = 4;
	uint32 trade_fee_rate = 5;
	uint32 tick_spacing = 6;
	uint32 fund_fee_rate = 7;
	uint32 padding_u32 = 8;
	string fund_owner = 9;
	repeated uint64 padding = 10;
}

message OperationState {
	uint32 bump = 1;
	repeated string operation_owners = 2;
	repeated string whitelist_mints = 3;
}

message ObservationState {
	bool initialized = 1;
	uint64 recent_epoch = 2;
	uint32 observation_index = 3;
	string pool_id = 4;
	repeated Observation observations = 5;
	repeated uint64 padding = 6;
}

message PersonalPositionState {
	repeated uint32 bump = 1;
	string nft_mint = 2;
	string pool_id = 3;
	int32 tick_lower_index = 4;
	int32 tick_upper_index = 5;
	string liquidity = 6;
	string fee_growth_inside0_last_x64 = 7;
	string fee_growth_inside1_last_x64 = 8;
	uint64 token_fees_owed0 = 9;
	uint64 token_fees_owed1 = 10;
	repeated PositionRewardInfo reward_infos = 11;
	uint64 recent_epoch = 12;
	repeated uint64 padding = 13;
}

message PoolState {
	repeated uint32 bump = 1;
	string amm_config = 2;
	string owner = 3;
	string token_mint0 = 4;
	string token_mint1 = 5;
	string token_vault0 = 6;
	string token_vault1 = 7;
	string observation_key = 8;
	uint32 mint_decimals0 = 9;
	uint32 mint_decimals1 = 10;
	uint32 tick_spacing = 11;
	string liquidity = 12;
	string sqrt_price_x64 = 13;
	int32 tick_current = 14;
	uint32 padding3 = 15;
	uint32 padding4 = 16;
	string fee_growth_global0_x64 = 17;
	string fee_growth_global1_x64 = 18;
	uint64 protocol_fees_token0 = 19;
	uint64 protocol_fees_token1 = 20;
	string swap_in_amount_token0 = 21;
	string swap_out_amount_token1 = 22;
	string swap_in_amount_token1 = 23;
	string swap_out_amount_token0 = 24;
	uint32 status = 25;
	repeated uint32 padding = 26;
	repeated RewardInfo reward_infos = 27;
	repeated uint64 tick_array_bitmap = 28;
	uint64 total_fees_token0 = 29;
	uint64 total_fees_claimed_token0 = 30;
	uint64 total_fees_token1 = 31;
	uint64 total_fees_claimed_token1 = 32;
	uint64 fund_fees_token0 = 33;
	uint64 fund_fees_token1 = 34;
	uint64 open_time = 35;
	uint64 recent_epoch = 36;
	repeated uint64 padding1 = 37;
	repeated uint64 padding2 = 38;
}

message ProtocolPositionState {
	uint32 bump = 1;
	string pool_id = 2;
	int32 tick_lower_index = 3;
	int32 tick_upper_index = 4;
	string liquidity = 5;
	string fee_growth_inside0_last_x64 = 6;
	string fee_growth_inside1_last_x64 = 7;
	uint64 token_fees_owed0 = 8;
	uint64 token_fees_owed1 = 9;
	repeated string reward_growth_inside = 10;
	uint64 recent_epoch = 11;
	repeated uint64 padding = 12;
}

message TickArrayState {
	string pool_id = 1;
	int32 start_tick_index = 2;
	repeated TickState ticks = 3;
	uint32 initialized_tick_count = 4;
	uint64 recent_epoch = 5;
	repeated uint32 padding = 6;
}

message TickArrayBitmapExtension {
	string pool_id = 1;
	repeated RepeatedUint64Row positive_tick_array_bitmap = 2;
	repeated RepeatedUint64Row negative_tick_array_bitmap = 3;
}


message CreateAmmConfigIxAccounts {
	string owner = 1;
	string amm_config = 2;
	string system_program = 3;
}

message CreateAmmConfigIxData {
	uint32 index = 1;
	uint32 tick_spacing = 2;
	uint32 trade_fee_rate = 3;
	uint32 protocol_fee_rate = 4;
	uint32 fund_fee_rate = 5;
}

message UpdateAmmConfigIxAccounts {
	string owner = 1;
	string amm_config = 2;
}

message UpdateAmmConfigIxData {
	uint32 param = 1;
	uint32 value = 2;
}

message CreatePoolIxAccounts {
	string pool_creator = 1;
	string amm_config = 2;
	string pool_state = 3;
	string token_mint0 = 4;
	string token_mint1 = 5;
	string token_vault0 = 6;
	string token_vault1 = 7;
	string observation_state = 8;
	string tick_array_bitmap = 9;
	string token_program0 = 10;
	string token_program1 = 11;
	string system_program = 12;
	string rent = 13;
}

message CreatePoolIxData {
	string sqrt_price_x64 = 1;
	uint64 open_time = 2;
}

message UpdatePoolStatusIxAccounts {
	string authority = 1;
	string pool_state = 2;
}

message UpdatePoolStatusIxData {
	uint32 status = 1;
}

message CreateOperationAccountIxAccounts {
	string owner = 1;
	string operation_state = 2;
	string system_program = 3;
}


message UpdateOperationAccountIxAccounts {
	string owner = 1;
	string operation_state = 2;
	string system_program = 3;
}

message UpdateOperationAccountIxData {
	uint32 param = 1;
	repeated string keys = 2;
}

message TransferRewardOwnerIxAccounts {
	string authority = 1;
	string pool_state = 2;
}

message TransferRewardOwnerIxData {
	string new_owner = 1;
}

message InitializeRewardIxAccounts {
	string reward_funder = 1;
	string funder_token_account = 2;
	string amm_config = 3;
	string pool_state = 4;
	string operation_state = 5;
	string reward_token_mint = 6;
	string reward_token_vault = 7;
	string reward_token_program = 8;
	string system_program = 9;
	string rent = 10;
}

message InitializeRewardIxData {
	uint64 open_time = 1;
	uint64 end_time = 2;
	string emissions_per_second_x64 = 3;
}

message CollectRemainingRewardsIxAccounts {
	string reward_funder = 1;
	string funder_token_account = 2;
	string pool_state = 3;
	string reward_token_vault = 4;
	string reward_vault_mint = 5;
	string token_program = 6;
	string token_program2022 = 7;
	string memo_program = 8;
}

message CollectRemainingRewardsIxData {
	uint32 reward_index = 1;
}

message UpdateRewardInfosIxAccounts {
	string pool_state = 1;
}


message SetRewardParamsIxAccounts {
	string authority = 1;
	string amm_config = 2;
	string pool_state = 3;
	string operation_state = 4;
	string token_program = 5;
	string token_program2022 = 6;
}

message SetRewardParamsIxData {
	uint32 reward_index = 1;
	string emissions_per_second_x64 = 2;
	uint64 open_time = 3;
	uint64 end_time = 4;
}

message CollectProtocolFeeIxAccounts {
	string owner = 1;
	string pool_state = 2;
	string amm_config = 3;
	string token_vault0 = 4;
	string token_vault1 = 5;
	string vault0_mint = 6;
	string vault1_mint = 7;
	string recipient_token_account0 = 8;
	string recipient_token_account1 = 9;
	string token_program = 10;
	string token_program2022 = 11;
}

message CollectProtocolFeeIxData {
	uint64 amount0_requested = 1;
	uint64 amount1_requested = 2;
}

message CollectFundFeeIxAccounts {
	string owner = 1;
	string pool_state = 2;
	string amm_config = 3;
	string token_vault0 = 4;
	string token_vault1 = 5;
	string vault0_mint = 6;
	string vault1_mint = 7;
	string recipient_token_account0 = 8;
	string recipient_token_account1 = 9;
	string token_program = 10;
	string token_program2022 = 11;
}

message CollectFundFeeIxData {
	uint64 amount0_requested = 1;
	uint64 amount1_requested = 2;
}

message OpenPositionIxAccounts {
	string payer = 1;
	string position_nft_owner = 2;
	string position_nft_mint = 3;
	string position_nft_account = 4;
	string metadata_account = 5;
	string pool_state = 6;
	string protocol_position = 7;
	string tick_array_lower = 8;
	string tick_array_upper = 9;
	string personal_position = 10;
	string token_account0 = 11;
	string token_account1 = 12;
	string token_vault0 = 13;
	string token_vault1 = 14;
	string rent = 15;
	string system_program = 16;
	string token_program = 17;
	string associated_token_program = 18;
	string metadata_program = 19;
}

message OpenPositionIxData {
	int32 tick_lower_index = 1;
	int32 tick_upper_index = 2;
	int32 tick_array_lower_start_index = 3;
	int32 tick_array_upper_start_index = 4;
	string liquidity = 5;
	uint64 amount0_max = 6;
	uint64 amount1_max = 7;
}

message OpenPositionV2IxAccounts {
	string payer = 1;
	string position_nft_owner = 2;
	string position_nft_mint = 3;
	string position_nft_account = 4;
	string metadata_account = 5;
	string pool_state = 6;
	string protocol_position = 7;
	string tick_array_lower = 8;
	string tick_array_upper = 9;
	string personal_position = 10;
	string token_account0 = 11;
	string token_account1 = 12;
	string token_vault0 = 13;
	string token_vault1 = 14;
	string rent = 15;
	string system_program = 16;
	string token_program = 17;
	string associated_token_program = 18;
	string metadata_program = 19;
	string token_program2022 = 20;
	string vault0_mint = 21;
	string vault1_mint = 22;
}

message OpenPositionV2IxData {
	int32 tick_lower_index = 1;
	int32 tick_upper_index = 2;
	int32 tick_array_lower_start_index = 3;
	int32 tick_array_upper_start_index = 4;
	string liquidity = 5;
	uint64 amount0_max = 6;
	uint64 amount1_max = 7;
	bool with_metadata = 8;
	optional bool base_flag = 9;
}

message OpenPositionWithToken22NftIxAccounts {
	string payer = 1;
	string position_nft_owner = 2;
	string position_nft_mint = 3;
	string position_nft_account = 4;
	string pool_state = 5;
	string protocol_position = 6;
	string tick_array_lower = 7;
	string tick_array_upper = 8;
	string personal_position = 9;
	string token_account0 = 10;
	string token_account1 = 11;
	string token_vault0 = 12;
	string token_vault1 = 13;
	string rent = 14;
	string system_program = 15;
	string token_program = 16;
	string associated_token_program = 17;
	string token_program2022 = 18;
	string vault0_mint = 19;
	string vault1_mint = 20;
}

message OpenPositionWithToken22NftIxData {
	int32 tick_lower_index = 1;
	int32 tick_upper_index = 2;
	int32 tick_array_lower_start_index = 3;
	int32 tick_array_upper_start_index = 4;
	string liquidity = 5;
	uint64 amount0_max = 6;
	uint64 amount1_max = 7;
	bool with_metadata = 8;
	optional bool base_flag = 9;
}

message ClosePositionIxAccounts {
	string nft_owner = 1;
	string position_nft_mint = 2;
	string position_nft_account = 3;
	string personal_position = 4;
	string system_program = 5;
	string token_program = 6;
}


message IncreaseLiquidityIxAccounts {
	string nft_owner = 1;
	string nft_account = 2;
	string pool_state = 3;
	string protocol_position = 4;
	string personal_position = 5;
	string tick_array_lower = 6;
	string tick_array_upper = 7;
	string token_account0 = 8;
	string token_account1 = 9;
	string token_vault0 = 10;
	string token_vault1 = 11;
	string token_program = 12;
}

message IncreaseLiquidityIxData {
	string liquidity = 1;
	uint64 amount0_max = 2;
	uint64 amount1_max = 3;
}

message IncreaseLiquidityV2IxAccounts {
	string nft_owner = 1;
	string nft_account = 2;
	string pool_state = 3;
	string protocol_position = 4;
	string personal_position = 5;
	string tick_array_lower = 6;
	string tick_array_upper = 7;
	string token_account0 = 8;
	string token_account1 = 9;
	string token_vault0 = 10;
	string token_vault1 = 11;
	string token_program = 12;
	string token_program2022 = 13;
	string vault0_mint = 14;
	string vault1_mint = 15;
}

message IncreaseLiquidityV2IxData {
	string liquidity = 1;
	uint64 amount0_max = 2;
	uint64 amount1_max = 3;
	optional bool base_flag = 4;
}

message DecreaseLiquidityIxAccounts {
	string nft_owner = 1;
	string nft_account = 2;
	string personal_position = 3;
	string pool_state = 4;
	string protocol_position = 5;
	string token_vault0 = 6;
	string token_vault1 = 7;
	string tick_array_lower = 8;
	string tick_array_upper = 9;
	string recipient_token_account0 = 10;
	string recipient_token_account1 = 11;
	string token_program = 12;
}

message DecreaseLiquidityIxData {
	string liquidity = 1;
	uint64 amount0_min = 2;
	uint64 amount1_min = 3;
}

message DecreaseLiquidityV2IxAccounts {
	string nft_owner = 1;
	string nft_account = 2;
	string personal_position = 3;
	string pool_state = 4;
	string protocol_position = 5;
	string token_vault0 = 6;
	string token_vault1 = 7;
	string tick_array_lower = 8;
	string tick_array_upper = 9;
	string recipient_token_account0 = 10;
	string recipient_token_account1 = 11;
	string token_program = 12;
	string token_program2022 = 13;
	string memo_program = 14;
	string vault0_mint = 15;
	string vault1_mint = 16;
}

message DecreaseLiquidityV2IxData {
	string liquidity = 1;
	uint64 amount0_min = 2;
	uint64 amount1_min = 3;
}

message SwapIxAccounts {
	string payer = 1;
	string amm_config = 2;
	string pool_state = 3;
	string input_token_account = 4;
	string output_token_account = 5;
	string input_vault = 6;
	string output_vault = 7;
	string observation_state = 8;
	string token_program = 9;
	string tick_array = 10;
}

message SwapIxData {
	uint64 amount = 1;
	uint64 other_amount_threshold = 2;
	string sqrt_price_limit_x64 = 3;
	bool is_base_input = 4;
}

message SwapV2IxAccounts {
	string payer = 1;
	string amm_config = 2;
	string pool_state = 3;
	string input_token_account = 4;
	string output_token_account = 5;
	string input_vault = 6;
	string output_vault = 7;
	string observation_state = 8;
	string token_program = 9;
	string token_program2022 = 10;
	string memo_program = 11;
	string input_vault_mint = 12;
	string output_vault_mint = 13;
}

message SwapV2IxData {
	uint64 amount = 1;
	uint64 other_amount_threshold = 2;
	string sqrt_price_limit_x64 = 3;
	bool is_base_input = 4;
}

message SwapRouterBaseInIxAccounts {
	string payer = 1;
	string input_token_account = 2;
	string input_token_mint = 3;
	string token_program = 4;
	string token_program2022 = 5;
	string memo_program = 6;
}

message SwapRouterBaseInIxData {
	uint64 amount_in = 1;
	uint64 amount_out_minimum = 2;
}


message ProgramState {
    oneof state_oneof {
        	AmmConfig amm_config = 1;
        	OperationState operation_state = 2;
        	ObservationState observation_state = 3;
        	PersonalPositionState personal_position_state = 4;
        	PoolState pool_state = 5;
        	ProtocolPositionState protocol_position_state = 6;
        	TickArrayState tick_array_state = 7;
        	TickArrayBitmapExtension tick_array_bitmap_extension = 8;
        }
}

message ProgramIxs {
    oneof ix_oneof {
        	CreateAmmConfigIx create_amm_config = 1;
        	UpdateAmmConfigIx update_amm_config = 2;
        	CreatePoolIx create_pool = 3;
        	UpdatePoolStatusIx update_pool_status = 4;
        	CreateOperationAccountIx create_operation_account = 5;
        	UpdateOperationAccountIx update_operation_account = 6;
        	TransferRewardOwnerIx transfer_reward_owner = 7;
        	InitializeRewardIx initialize_reward = 8;
        	CollectRemainingRewardsIx collect_remaining_rewards = 9;
        	UpdateRewardInfosIx update_reward_infos = 10;
        	SetRewardParamsIx set_reward_params = 11;
        	CollectProtocolFeeIx collect_protocol_fee = 12;
        	CollectFundFeeIx collect_fund_fee = 13;
        	OpenPositionIx open_position = 14;
        	OpenPositionV2Ix open_position_v2 = 15;
        	OpenPositionWithToken22NftIx open_position_with_token22_nft = 16;
        	ClosePositionIx close_position = 17;
        	IncreaseLiquidityIx increase_liquidity = 18;
        	IncreaseLiquidityV2Ix increase_liquidity_v2 = 19;
        	DecreaseLiquidityIx decrease_liquidity = 20;
        	DecreaseLiquidityV2Ix decrease_liquidity_v2 = 21;
        	SwapIx swap = 22;
        	SwapV2Ix swap_v2 = 23;
        	SwapRouterBaseInIx swap_router_base_in = 24;
        }
}

